--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Mi primera página web</h1>
+    <p>Ya está online !</p>
     
 </body>
 </html>
